added responsive design

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -49,7 +49,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700i,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,400i,500,500i,600,700,800" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
 
@@ -162,18 +162,18 @@
         <!-- Project Section -->
         <section class="projects__section" id="projects">
             <!-- <div class="triangle"></div> -->
-
+            
             <h2 class="heading-secondary">Projects</h2>
             <div class="row">
 
                 <!-- Trillo Project -->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img class="" src="./img/projects/trillo.jpg" alt="Trillo Project" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Web App</p>
-                        <h2 class="portfolio-content__text-title">Trillo</h2>
-                        <a href="#trillo-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Web App</p>
+                        <h2 class="project-content__text-title">Trillo</h2>
+                        <a href="#trillo-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
 
@@ -184,7 +184,7 @@
                             <img src="./img/projects/trillo.png" alt="Trillo Project" class="popup__img">
                         </div>
                         <div class="popup__right">
-                            <a href="#porfolio" class="popup__close">&times;</a>
+                            <a href="#projects" class="popup__close">&times;</a>
                             <h3 class="popup-heading trillo-color">Project type</h3>
                             <p class="popup__text">Web Application</p>
                             <h3 class="popup-heading trillo-color">Project Description</h3>
@@ -209,13 +209,13 @@
                 </div>
 
                 <!-- Natours -->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img class="" src="./img/projects/natours.jpg" alt="Natours Project" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Website</p>
-                        <h2 class="portfolio-content__text-title">Natours</h2>
-                        <a href="#natours-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Website</p>
+                        <h2 class="project-content__text-title">Natours</h2>
+                        <a href="#natours-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
 
@@ -250,13 +250,13 @@
                 </div>
 
                 <!-- Nexter Project -->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img class="" src="./img/projects/nexter.jpg" alt="Nexter Project" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Website</p>
-                        <h2 class="portfolio-content__text-title">Nexter</h2>
-                        <a href="#nexter-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Website</p>
+                        <h2 class="project-content__text-title">Nexter</h2>
+                        <a href="#nexter-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
 
@@ -291,13 +291,13 @@
                 </div>
 
                 <!-- Vesco Project-->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img src="./img/projects/vesco.jpg" alt="Vesco" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Website</p>
-                        <h2 class="portfolio-content__text-title">Vesco</h2>
-                        <a href="#vesco-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Website</p>
+                        <h2 class="project-content__text-title">Vesco</h2>
+                        <a href="#vesco-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
 
@@ -332,13 +332,13 @@
                 </div>
 
                 <!-- Portfolio Project -->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img src="./img/projects/portfolio.jpg" alt="Portfolio" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Website</p>
-                        <h2 class="portfolio-content__text-title">Jaime Rosales</h2>
-                        <a href="#portfolio-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Website</p>
+                        <h2 class="project-content__text-title">Jaime Rosales</h2>
+                        <a href="#portfolio-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
 
@@ -373,13 +373,13 @@
                 </div>
 
                 <!-- Omnifood -->
-                <figure class="portfolio-content js--wp-3">
+                <figure class="project-content js--wp-3">
                     <img src="./img/projects/omnifood.jpg" alt="Omnifood" />
                     <div class="content-overlay"></div>
-                    <figcaption class="portfolio-content__text">
-                        <p class="portfolio-content__text-sub-title">Website</p>
-                        <h2 class="portfolio-content__text-title">Omnifood</h2>
-                        <a href="#omnifood-popup" class="portfolio-content__link">View Project</a>
+                    <figcaption class="project-content__text">
+                        <p class="project-content__text-sub-title">Website</p>
+                        <h2 class="project-content__text-title">Omnifood</h2>
+                        <a href="#omnifood-popup" class="project-content__link">View Project</a>
                     </figcaption>
                 </figure>
             </div>
@@ -414,13 +414,7 @@
                     </div>
                 </div>
             </div>
-
-            <!-- <div class="btn"> -->
                 <a class="btn btn__link" href="#"> View more </a>
-                <!-- <div class="line line--one"></div>
-                <div class="line line--two"></div>
-                <div class="line line--three"></div>
-                <div class="line line--four"></div> -->
             </div>
         </section>
 
