--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -2,6 +2,35 @@
 <html lang="en">
 
 <head>
+
+    <!-- Start of Async Drift Code -->
+<script>
+    "use strict";
+    !function() {
+      var t = window.driftt = window.drift = window.driftt || [];
+      if (!t.init) {
+        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+        t.factory = function(e) {
+          return function() {
+            var n = Array.prototype.slice.call(arguments);
+            return n.unshift(e), t.push(n), t;
+          };
+        }, t.methods.forEach(function(e) {
+          t[e] = t.factory(e);
+        }), t.load = function(t) {
+          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+          var i = document.getElementsByTagName("script")[0];
+          i.parentNode.insertBefore(o, i);
+        };
+      }
+    }();
+    drift.SNIPPET_VERSION = '0.3.1';
+    drift.load('h66fg3d68u8v');
+    </script>
+    <!-- End of Async Drift Code -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -141,8 +170,8 @@
             <div class="row">
 
                 <!-- Trillo Project -->
-                <figure class="project-content">
-                    <img class="wow animated fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s" src="./img/projects/trillo.jpg" alt="Trillo Project" />
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/trillo.jpg" alt="Trillo Project" />
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Web App</p>
@@ -183,8 +212,8 @@
                 </div>
 
                 <!-- Natours -->
-                <figure class="project-content">
-                    <img class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" src="./img/projects/natours.jpg" alt="Natours Project"/>
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/natours.jpg" alt="Natours Project"/>
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Website</p>
@@ -224,8 +253,8 @@
                 </div>
 
                 <!-- Nexter Project -->
-                <figure class="project-content">
-                    <img class="wow animated fadeInRight" data-wow-duration="1s" data-wow-delay=".5s" src="./img/projects/nexter.jpg" alt="Nexter Project" />
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/nexter.jpg" alt="Nexter Project" />
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Website</p>
@@ -265,8 +294,8 @@
                 </div>
 
                 <!-- Vesco Project-->
-                <figure class="project-content">
-                    <img class="wow animated fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s" src="./img/projects/vesco.jpg" alt="Vesco" />
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/vesco.jpg" alt="Vesco" />
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Website</p>
@@ -306,8 +335,8 @@
                 </div>
 
                 <!-- Portfolio Project -->
-                <figure class="project-content ">
-                    <img class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"src="./img/projects/portfolio.jpg" alt="Portfolio" />
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/portfolio.jpg" alt="Portfolio" />
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Website</p>
@@ -347,8 +376,8 @@
                 </div>
 
                 <!-- Omnifood -->
-                <figure class="project-content">
-                    <img class="wow animated fadeInRight" data-wow-duration="1s" data-wow-delay=".5s" src="./img/projects/omnifood.jpg" alt="Omnifood" />
+                <figure class="project-content wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                    <img src="./img/projects/omnifood.jpg" alt="Omnifood" />
                     <div class="content-overlay"></div>
                     <figcaption class="project-content__text">
                         <p class="project-content__text-sub-title">Website</p>
