cleaned up code

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -133,7 +133,7 @@
 
         <section class="section__services" id="services">
                 <h2 class="heading-secondary wow animated fadeInDown" data-wow-duration="2s" data-wow-delay=".5s">What I do</h2>
-            <div class="row">
+            <!-- <div class="row"> -->
                 <div class="services__container  wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                     <div class="services__content">
                         <i class="services__content-icon fas fa-pencil-ruler fa-4x" style="color:#00ADDA"></i>
@@ -147,18 +147,19 @@
                         <i class="services__content-icon fas fa-laptop-code fa-4x" style="color:#00ADDA"></i>
                         <h3 class="heading-tertiary">Web development</h3>
                         <p class="services__content-text">
-                            I like to code things from scratch, and enjoy bringing ideas to life in the browser.
+                            I build responsive websites for optimal user experience, and enjoy bringing ideas to life across all browser.
                         </p>
                     </div>
                     <div class="services__content">
                         <i class="services__content-icon fas fa-search fa-4x" style="color:#00ADDA"></i>
                         <h3 class="heading-tertiary">Seo Optimization</h3>
                         <p class="services__content-text">
-                            I like to code things from scratch, and enjoy bringing ideas to life in the browser.
+                            I like to optimize your website for maximum performance and to make it easy to find, 
+                            and reach the widest audience possible.
                         </p>
-                    </div>
+                    </div> 
                 </div>
-            </div>
+            <!-- </div> -->
 
         </section>
 
