--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <!-- Start of Async Drift Code -->
     <script>
         "use strict";
@@ -37,7 +36,10 @@
     </script>
     <!-- End of Async Drift Code -->
 
-    <meta charset="UTF-8">
+     <!-- Favicon -->
+     <link rel="shortcut icon" type="image/png" href="./img/jr-favicon.ico">
+
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta content="Web developer based out of Idaho, Unated States - specializing in 
@@ -118,7 +120,7 @@
         </div>
     </header>
 
-    <main>        
+    <main>
         <section class="section__about" id="about">
             <!-- <h2 class="heading-secondary" data-text="About me">About me</h2> -->
             <div class="about__items js--wp-2">
@@ -146,7 +148,7 @@
                     <i class="services__content-icon fas fa-pencil-ruler fa-4x" style="color:#00ADDA"></i>
                     <h3 class="heading-tertiary">Web design</h3>
                     <p class="services__content-text">
-                        I value simple but elegant content structure, clean design patterns, and thoughtful
+                        I focus on desiigning simple but elegant content layouts, clean design patterns, and thoughtful
                         interactions.
                     </p>
                 </div>
@@ -432,7 +434,7 @@
             <div class="container">
                 <a href="https://twitter.com/Dave_Conner" class="btn btn_projects">
                     <svg>
-                        <rect x="0" y="0" fill="none" width="100%" height="100%"/>
+                        <rect x="0" y="0" fill="none" width="100%" height="100%" />
                     </svg>
                     View more
                 </a>
@@ -441,7 +443,8 @@
 
         <!-- <h2 class="heading-secondary ">Skills</h2> -->
         <section class="section__skills" id="skills">
-            <h2 class="heading-secondary wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">Skills</h2>
+            <h2 class="heading-secondary wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">Skills
+            </h2>
             <div class="skills wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                 <div class="skill__icon">
                     <i class="fab fa-js-square java-script fa-8x"></i>
