updated responsive design

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -93,14 +93,7 @@
                 </a>
             </div>         
         </div>
-
-        <!-- <figure class="story__shape">
-            <img src="./img/us_flag.png" alt="Person on a tour" class="story__img">
-            <figcaption class="story__caption">
-                Mary Smith
-            </figcaption>
-        </figure> -->
-        
+    
         <!-- NAVIGATION -->
         <nav class="menu">
             <div class="menu-branding">
@@ -146,8 +139,8 @@
             </ul>
         </nav>
 
+         <!-- MAIN HEADING -->
         <div class="main-heading">
-
             <h1 class="heading-primary">
                 Jaime <span class="text-secondary">Rosales</span>
             </h1>
@@ -161,14 +154,14 @@
                 Desarrollador Front-end con una pasion por aprender
             </h2>
             <div class="language english active">
-                <a href="#portfolio" class="btn_header btn_header--animated"><span>View Projects</span></a>
+                <a href="#projects" class="btn_header btn_header--animated project-link"><span>View Projects</span></a>
             </div>
             <div class="language spanish">
-                <a href="#portfolio" class="btn_header btn_header--animated"><span>Ver Projectos</span></a>
+                <a href="#projects" class="btn_header btn_header--animated project-link"><span>Ver Projectos</span></a>
             </div>
         </div>
 
-        <!-- begin Scroll Down Button  -->
+        <!-- SCROL DOMW BOTTON -->
         <div class="wrapper">
             <button type="button" class="scroll_down" id="scroll_down"></button>
         </div>
@@ -959,10 +952,10 @@
             </li>
         </ul>
         <div class="language english active">
-            <p class="copyright">copyright &copy; 2021 by jaimewebdev. All rights reserved</p>
+            <p class="copyright">copyright &copy; 2021 by jaimewebdev.</p>
         </div>
         <div class="language spanish">
-            <p class="copyright">derechos de autor &copy; 2021 por jaimewebdev. Reservados todos los derechos</p>
+            <p class="copyright">derechos de autor &copy; 2021 por jaimewebdev.</p>
         </div>
     </footer>
     <script src="js/wow.min.js"></script>
