updated home page

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -944,32 +944,9 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <!-- <ul class="nav">
-            <li class="nav__item">
-                <a href="https://github.com/rosajaim" target="blank">
-                    <i class="fab fa-github white fa-2x"></i>
-                </a>
-            </li>
-            <li class="nav__item">
-                <a href="https://www.linkedin.com/in/jaime-rosales-a70b0479/" target="blank">
-                    <i class="fab fa-linkedin white fa-2x"></i>
-                </a>
-            </li>
-            <li class="nav__item">
-                <div class="language english active">
-                    <a href="./img/JR_resume.pdf" class="nav__link" download><i class="fas fa-file-download"></i>
-                        Resume
-                    </a>
-                </div>
-                <div class="language spanish">
-                    <a href="./img/JR_resume.pdf" class="nav__link" download><i class="fas fa-file-download"></i>
-                        Currículum
-                    </a>
-                </div>
 
-            </li>
-        </ul> -->
+    <!-- FOOTER -->
+    <footer class="footer">
         <div class="language english active">
             <p class="copyright">copyright &copy; 2021 by jaimewebdev.</p>
         </div>
@@ -977,6 +954,7 @@
             <p class="copyright">derechos de autor &copy; 2021 por jaimewebdev.</p>
         </div>
     </footer>
+
     <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
