updated home page

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -141,7 +141,7 @@
                     <a href="#projects" class="nav-link" data-text="projects">Projects</a>
                 </li>
                 <li class="nav-item language spanish">
-                    <a href="#projects" class="nav-link" data-text="proyectos">Projectos</a>
+                    <a href="#projects" class="nav-link" data-text="proyectos">Proyectos</a>
                 </li>
                 <li class="nav-item language english active">
                     <a href="#skills" class="nav-link" data-text="skills">Skills</a>
@@ -176,7 +176,7 @@
                 <a href="#projects" class="btn_header btn_header--animated project-link"><span>View Projects</span></a>
             </div>
             <div class="language spanish">
-                <a href="#projects" class="btn_header btn_header--animated project-link"><span>Ver Projectos</span></a>
+                <a href="#projects" class="btn_header btn_header--animated project-link"><span>Ver Proyectos</span></a>
             </div>
         </div>
 
@@ -197,21 +197,20 @@
                         and web performance.
                     </p>
                     <br>
-                    <p>When I'm not coding I enjoy spending quality time with my little kids. I like listening to music,
-                        playing soccer,
-                        learning new things, and recently discovered a love for Virgil's Rootbeer!</p>
+                    <p>When I'm not programing I enjoy spending quality time with my family. I like listening to music,
+                        playing soccer, learning new things, and recently discovered a passion for Virgil's Rootbeer!</p>
                 </div>
 
                 <div class="about__items-text language spanish">
                     <h3><span>Hola, soy Jaime.</span></h3>
-                    <p>Soy un desarrollador front-end entusiasta y orientado a los detalles. Me enfoco en construir
-                        sitios web
-                        sobre los principios de código escalable y mantenible, diseño responsivo y rendimiento web.
+                    <p>Soy un desarrollador front-end entusiasta y orientado a los detalles. Me centro en programar
+                        sitios web sobre los principios de código escalable y mantenible, 
+                        diseño responsivo y rendimiento de sitios web.
                     </p>
                     <br>
-                    <p>Cuando no estoy codificando, disfruto pasar tiempo de calidad con mis hijos pequeños. Me gusta
-                        escuchar música,
-                        jugar fútbol, aprender cosas nuevas, ¡y recientemente descubrí el amor Virgil's Rootbeer!</p>
+                    <p>Cuando no estoy programando, disfruto pasar tiempo de calidad con mi familia. Me gusta
+                        escuchar música, jugar fútbol, explorar y aprender cosas nuevas. 
+                        ¡También recientemente descubrí mi pasión por la Rootbeer Virgil's!</p>
                 </div>
 
             </div>
@@ -236,7 +235,7 @@
                         <h3 class="heading-tertiary">Web design</h3>
                     </div>
                     <div class="language spanish ">
-                        <h3 class="heading-tertiary">Diseño web</h3>
+                        <h3 class="heading-tertiary">Diseño de sitios web</h3>
                     </div>
                     <div class="language english active">
                         <p class="services__content-text">
@@ -291,7 +290,7 @@
                     </div>
                     <div class="language spanish ">
                         <p class="services__content-text">
-                            Me gusta optimizar su sitio web para obtener el máximo rendimiento y que sea fácil
+                            Me gusta optimizar los sitios web para obtener el máximo rendimiento y que sea fácil
                             de encontrar y llegar a la audiencia más amplia posible.
                         </p>
                     </div>
