upgraded responsive design

--- a/jaimewebdev.com/index.html
+++ b/jaimewebdev.com/index.html
@@ -672,16 +672,16 @@
                                 <img src="./img/projects/portfolio.png" alt="Natours photo" class="popup__img">
                             </div>
                             <div class="popup__right">
-                                <a href="#portfolio" class="popup__close">&times;</a>
-                                <h3 class="popup-heading natours-color">Project type</h3>
+                                <a href="#portfolio" class="popup__close portfolio-color">&times;</a>
+                                <h3 class="popup-heading portfolio-color">Project type</h3>
                                 <p class="popup__text">Personal Website</p>
-                                <h3 class="popup-heading natours-color">Project Description</h3>
+                                <h3 class="popup-heading portfolio-color">Project Description</h3>
                                 <p class="popup__text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
                                     ipsum hic magni
                                     cum minima quisquam a amet aut excepturi consequatur sit necessitatibus.
                                 </p>
 
-                                <h3 class="popup-heading natours-color">Technologies Used</h3>
+                                <h3 class="popup-heading portfolio-color">Technologies Used</h3>
                                 <p class="popup__text">
                                     HTML5, CSS3, Custom Grid Layout, JavaScript, Sass, Git, npm
                                 </p>
