--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
 
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/1b4e84012c.js" crossorigin="anonymous"></script>
@@ -15,48 +16,73 @@
 
     <title>Colter May</title>
 </head>
+
 <body>
-    <div class="slider">
-        <div class="slide current">
-            <div class="slide__content">
-                <h1>Slide one</h1>
-                <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita 
-                    impedit recusandae eaque officiis nesciunt eligendi!</p>
+    <header class="header">
+          <!-- ====== SCROLL BANNER ======-->
+          <div class="scroll">
+            <p>scroll</p>
+        </div>
+        
+        <!-- ====== NAVIGATION ======-->
+        <nav class="main__nav">
+            <a class="logo" href="#">Colter May.</a>
+            <ul class="nav">
+                <li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+                <li class="nav__item"><a class="nav__link" href="#artWork">Art work</a></li>
+                <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
+            </ul>
+            <div class="social__icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </nav>
+                
+        <!-- ====== HEADER SLIDER ======-->
+        <div class="slider">
+            <div class="slide current">
+                <div class="slide__content">
+                    <h1>Slide one</h1>
+                    <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita
+                        impedit recusandae eaque officiis nesciunt eligendi!</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="slide__content">
+                    <h1>Slide two</h1>
+                    <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita
+                        impedit recusandae eaque officiis nesciunt eligendi!</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="slide__content">
+                    <h1>Slide three</h1>
+                    <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita
+                        impedit recusandae eaque officiis nesciunt eligendi!</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="slide__content">
+                    <h1>Slide four</h1>
+                    <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita
+                        impedit recusandae eaque officiis nesciunt eligendi!</p>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="slide__content">
+                    <h1>Slide five</h1>
+                    <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita
+                        impedit recusandae eaque officiis nesciunt eligendi!</p>
+                </div>
             </div>
         </div>
-        <div class="slide">
-            <div class="slide__content">
-                <h1>Slide two</h1>
-                <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita 
-                    impedit recusandae eaque officiis nesciunt eligendi!</p>
-            </div>
+        <div class="slide__buttons">
+            <button id="prev"><i class="fas fa-arrow-left"></i></button>
+            <button id="next"><i class="fas fa-arrow-right"></i></button>
         </div>
-        <div class="slide">
-            <div class="slide__content">
-                <h1>Slide three</h1>
-                <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita 
-                    impedit recusandae eaque officiis nesciunt eligendi!</p>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="slide__content">
-                <h1>Slide four</h1>
-                <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita 
-                    impedit recusandae eaque officiis nesciunt eligendi!</p>
-            </div>
-        </div>
-        <div class="slide">
-            <div class="slide__content">
-                <h1>Slide five</h1>
-                <p>Lorem ipsum dolor sit vel ea nam sint nihil quia ab voluptatibus? Accusantium iste, nemo expedita 
-                    impedit recusandae eaque officiis nesciunt eligendi!</p>
-            </div>
-        </div>
-    </div>
-    <div class="slide__buttons">
-        <button id="prev"><i class="fas fa-arrow-left"></i></button>
-        <button id="next"><i class="fas fa-arrow-right"></i></button>
-    </div>
+    </header>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
